--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,18 @@
 	</head>
 	<body>
 
-        <h1>Hello</h1>
+        <div class="container" id="main-body">
+        	<div class="row align-items-center">
+			    <div class="col align-self-center" id="title">
+			      <h1>Movie Talk</h1>
+			    </div>
+        	</div>
+
+        	<div class="row row align-items-center images">
+        		<img src="https://i.ytimg.com/vi/K5k8sx7C5gg/maxresdefault.jpg" alt="" class="img-thumbnail">
+        	</div>
+
+        </div>
 
 		<!-- Latest compiled and minified JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
