Uploading for 201 class assignment

--- a/src/steve/index.html
+++ b/src/steve/index.html
@@ -27,7 +27,7 @@
           			</ul>
         		</div><!--/.nav-collapse -->
       		</div>
-    	</nav>
+    </nav>
 
 	<div class="container">	
 		<div id="title">
@@ -51,14 +51,14 @@
 				<h3>Click on an image</h3>
 			</div>
 			<div id="nacho-libre">
-				<img src="images/Nacho.jpg" alt="Nacho Libre" id="nacho" style="cursor:pointer">
+				<img src="./images/Nacho.jpg" alt="Nacho Libre" id="nacho" style="cursor:pointer">
 				</br>
-				<img src="images/Hector.jpg" alt="Hector Jimenez" id="hector" style="cursor:pointer">
+				<img src="./images/Hector.jpg" alt="Hector Jimenez" id="hector" style="cursor:pointer">
 			</div>
 			<div id="star-wars">
-				<img src="images/Han.jpg" alt="Han Solo" id="han" style="cursor:pointer">
+				<img src="./images/Han.jpg" alt="Han Solo" id="han" style="cursor:pointer">
 				</br>
-				<img src="images/Vader.jpg" alt="Darth Vader" id="vader" style="cursor:pointer">	
+				<img src="./images/Vader.jpg" alt="Darth Vader" id="vader" style="cursor:pointer">	
 			</div>
 		</div>
 	</div>
